# rwreader

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_EXAMPLES.md  INDEX.md  MANIFEST.in  README.md  README_ANALYSIS.md  TESTING.md  TESTING_AUTOMATED.md  TEXTUAL_ANALYSIS.md  TEXTUAL_QUICK_REFERENCE.txt  config.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linter.yml  test.yml  tests.yml
src/rwreader/: __init__.py  cache.py  client.py  client_improved.py  config.py  exceptions.py  main.py
src/rwreader/ui/: __init__.py  app.py  styles.tcss
src/rwreader/ui/screens/: __init__.py  article_list.py  article_reader.py  category_list.py  confirm.py  fullscreen.py  help.py  link_screens.py  link_selection.py  save_improved.py  search.py
src/rwreader/ui/widgets/: __init__.py  api_status.py  article_viewer.py  link_selection_screen.py  linkable_markdown_viewer.py  load_more.py
src/rwreader/utils/: __init__.py  debug.py  highlight_manager.py  logging.py  markdown_converter.py  sanitize.py  ui_helpers.py
tests/: __init__.py  conftest.py  test_app_integration.py  test_article_reader.py  test_cache.py  test_client.py  test_config.py  test_exceptions.py  test_highlight_manager.py  test_markdown_converter.py  test_ui_helpers.py
