[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwreader"
version = "0.1.1"
description = "A terminal user interface for Readwise Reader"
authors = [
    {name = "Peter Reuterås", email = "peter@reuteras.net"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.27.0",
    "httpx>=0.24.0",
    "toml>=0.10.2",
    "rich>=13.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "markdownify>=1.1.0",
    "readwise-api",
]

[project.scripts]
rwreader = "rwreader.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/rwreader"
"Bug Tracker" = "https://github.com/yourusername/rwreader/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "textual-dev>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv.sources]
ttrss-python = { git = "https://github.com/reuteras/ttrss-python.git" }
readwise-api = { git = "https://github.com/reuteras/readwise-api.git" }

[tool.ruff.lint.pydocstyle]
convention="google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=rwreader",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
