[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwreader"
version = "0.1.2"
description = "A terminal user interface for Readwise Reader"
authors = [
    {name = "Peter Reuterås", email = "peter@reuteras.net"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "textual>=6.0.0",
    "httpx>=0.24.0",
    "rich>=13.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "markdownify>=1.1.0",
    "readwise-api",
]

[project.scripts]
rwreader = "rwreader.main:main"

[project.urls]
"Homepage" = "https://github.com/reuteras/rwreader"
"Bug Tracker" = "https://github.com/reuteras/rwreader/issues"
"Repository" = "https://github.com/reuteras/rwreader.git"
"Documentation" = "https://github.com/reuteras/rwreader#readme"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "textual-dev>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv.sources]
ttrss-python = { git = "https://github.com/reuteras/ttrss-python.git" }
readwise-api = { git = "https://github.com/reuteras/readwise-api.git" }

[tool.ruff.lint.pydocstyle]
convention="google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=rwreader",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

# Start with these disabled, enable gradually
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "readwise.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "markdownify.*"
ignore_missing_imports = true
